--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 	  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
 	  crossorigin="anonymous">
 	 </script>
-
-    <link rel="stylesheet" type="text/css" href="font.css">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:800&display=swap" rel="stylesheet">
+    <!-- <link rel="stylesheet" type="text/css" href="font.css"> -->
     <link rel="stylesheet" type="text/css" href="home-page.css">
 <!--     <link rel="stylesheet" type="text/css" href="flex-layout-attribute.css">
  -->
